force-app/main/default/objects/ssot__BenefitPrvdSearchableFld__dlm/fields/ssot__BenefitTypeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__BenefitTypeId__c</fullName>
    <label>Benefit Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BenefitTypeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>