force-app/main/default/objects/ssot__BenefitPrvdSearchableFld__dlm/fields/ssot__FacilityGeoLocationId__c.field-meta.xml
<CustomField>
    <fullName>ssot__FacilityGeoLocationId__c</fullName>
    <label>Facility Geo Location</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FacilityGeoLocationId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>