force-app/main/default/objects/ssot__BenefitPrvdSearchableFld__dlm/fields/ssot__FacilityPhone__c.field-meta.xml
<CustomField>
    <fullName>ssot__FacilityPhone__c</fullName>
    <label>Facility Phone</label>
    <length>40</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FacilityPhone</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>