force-app/main/default/objects/ssot__BenefitPrvdSearchableFld__dlm/fields/ssot__HighestAgeServedNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__HighestAgeServedNumber__c</fullName>
    <label>Highest Age Served</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>HighestAgeServedNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>