force-app/main/default/objects/ssot__BenefitPrvdSearchableFld__dlm/fields/ssot__LicenseJurisdictionRegion__c.field-meta.xml
<CustomField>
    <fullName>ssot__LicenseJurisdictionRegion__c</fullName>
    <label>License Jurisdiction Region</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LicenseJurisdictionRegion</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>