force-app/main/default/objects/ssot__BenefitPrvdSearchableFld__dlm/fields/ssot__Longitude__c.field-meta.xml
<CustomField>
    <fullName>ssot__Longitude__c</fullName>
    <label>Longitude</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Longitude</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>