force-app/main/default/objects/ssot__BenefitPrvdSearchableFld__dlm/fields/ssot__LowestAgeServedNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__LowestAgeServedNumber__c</fullName>
    <label>Lowest Age Served</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LowestAgeServedNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>