force-app/main/default/objects/ssot__BenefitPrvdSearchableFld__dlm/fields/ssot__NationalProviderIdentifier__c.field-meta.xml
<CustomField>
    <fullName>ssot__NationalProviderIdentifier__c</fullName>
    <label>National Provider Identifier</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>NationalProviderIdentifier</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>