force-app/main/default/objects/ssot__BenefitPrvdSearchableFld__dlm/fields/ssot__OperatingDaysList__c.field-meta.xml
<CustomField>
    <fullName>ssot__OperatingDaysList__c</fullName>
    <label>Operating Days List</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OperatingDaysList</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>