force-app/main/default/objects/ssot__BenefitPrvdSearchableFld__dlm/fields/ssot__PractitionerCertificationType__c.field-meta.xml
<CustomField>
    <fullName>ssot__PractitionerCertificationType__c</fullName>
    <label>Practitioner Certification Type</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PractitionerCertificationType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>