force-app/main/default/objects/ssot__BenefitPrvdSearchableFld__dlm/fields/ssot__ProviderGender__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProviderGender__c</fullName>
    <label>Provider Gender</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProviderGender</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>