force-app/main/default/objects/ssot__BenefitPrvdSearchableFld__dlm/fields/ssot__ProviderSpeciality__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProviderSpeciality__c</fullName>
    <label>Provider Speciality</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProviderSpeciality</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>