force-app/main/default/objects/ssot__BenefitPrvdSearchableFld__dlm/fields/ssot__rel_1741334885643_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1741334885643_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BenefitPrvdSearchableFld_ProviderId__rel</label>
    <referenceTo>ssot__HealthcareProvider__dlm</referenceTo>
    <relationshipLabel>BenefitPrvdSearchableFld_ProviderId__rel</relationshipLabel>
    <relationshipName>rel_1741334885643_end</relationshipName>
    <type>Lookup</type>
</CustomField>