force-app/main/default/objects/ssot__BenefitPrvdSearchableFld__dlm/fields/ssot__rel_1741334891321_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1741334891321_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BenefitPrvdSearchableFld_BenefitType_rel</label>
    <referenceTo>ssot__BenefitType__dlm</referenceTo>
    <relationshipLabel>BenefitPrvdSearchableFld_BenefitType_rel</relationshipLabel>
    <relationshipName>rel_1741334891321_end</relationshipName>
    <type>Lookup</type>
</CustomField>