force-app/main/default/objects/ssot__BenefitPrvdSearchableFld__dlm/fields/ssot__SpecialtyId__c.field-meta.xml
<CustomField>
    <fullName>ssot__SpecialtyId__c</fullName>
    <label>Specialty</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SpecialtyId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>